updated the README and fixed some spacing with the header in index.html

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ ul {
   align-items: center;
   font-family: Roboto, sans-serif;
   background-color: #1f2937;
-  padding: 100px 200px;
+  padding: 30px 200px;
 }
 
 .section1 {
